# pan

./: .gitignore  AGENTS.md  AGENT_LOOP.md  CHANGELOG.md  README.md  REVIEW_PERSONAS.md  TODOS.md  pyproject.toml
launchd/: com.pan.gateway.plist.template  com.pan.watcher.plist.template
slack/: manifest.yaml
src/pan/: __main__.py  cli.py  config.py  credentials.py  directive.py  errors.py  inbox.py  interface.py  logging.py  models.py  power.py  seams.py  sessions.py  slack_format.py  spawn.py  threadmap.py  watcher.py
src/pan/adapters/: clock.py  git_worktree.py  herdr.py  morcli.py
src/pan/gateway/: app.py  auth.py  slack_post.py
src/pan/hooks/: notification.py  pretooluse_gate.py  stop.py
src/pan/skills/orchestrating/: SKILL.md
tests/unit/: test_auth.py  test_cli.py  test_clock.py  test_config.py  test_credentials.py  test_directive.py  test_errors.py  test_gateway_app.py  test_git_worktree_adapter.py  test_herdr_adapter.py  test_hooks.py  test_inbox.py  test_interface.py  test_logging.py  test_models.py  test_morcli_adapter.py  test_power.py  test_pretooluse_gate.py  test_sessions.py  test_slack_format.py  test_slack_post.py  test_spawn.py  test_threadmap.py  test_watcher.py
